--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,7 +2,7 @@ version: 0.2
 phases:
   install:
     runtime-versions:
-        nodejs: 10
+        python: 3.8
   build:
     commands:
       - npm install time
