--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,11 +3,14 @@ phases:
   install:
     runtime-versions:
         python: 3.7
+    commands:
+        - pip install pytest
   build:
     commands:
       - npm install time
       - export BUCKET=simple-serveless-pipeline-s3
       - aws cloudformation package --template-file template.yml --s3-bucket $BUCKET --output-template-file outputtemplate.yml
+      - python -m pytest indextest.py
 artifacts:
   type: zip
   files:
