output report as json

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -19,6 +19,4 @@ artifacts:
 reports:
   simple-pipeline-test-reports:
     files:
-      - '**/*'
-    base-directory: 'target/all-reports'
-    discard-paths: false
+      - my-test-report-file.json
