--- a/template.yml
+++ b/template.yml
@@ -2,17 +2,16 @@ AWSTemplateFormatVersion: '2010-09-09'
 Transform: AWS::Serverless-2016-10-31
 Description: Outputs the time
 Resources:
-  TimeFunction:
+  NewHelloFunction:
     Type: AWS::Serverless::Function
     Properties:
-      Handler: index.handler
+      Handler: indexb.lambda_handler
       Runtime: python3.7
       CodeUri: ./
       Events:
-        MyTimeApi:
+        MyHiApi:
           Type: Api
           Properties:
-            Path: /TimeResource
-            Method: GET
-            
+            Path: /hello
+            Method: get
 
